# FPL-assistant-manager

./: README.md  pyproject.toml  requirements.txt
data/: am_pts.csv  manager_prices.csv  ratings.csv
src/data/: __init__.py  fpl_api.py  league_table.py  ratings.py  read_csv.py  upcoming_fixtures.py
src/simulation/: goals_probability_distribution.py  manager_points.py  match_simulation.py  simulate.py
tests/data/: test_fpl_api.py  test_league_table.py  test_ratings.py  test_upcoming_fixtures.py
